refactor: Migrate to @3mo/localization package

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"@3mo/tab": "x",
 		"@3mo/tooltip": "x",
 		"@3mo/virtualized-scroller": "x",
+		"@3mo/localization": "x",
 		"@a11d/lit": "x",
 		"@a11d/lit-application": "x",
 		"@a11d/lit-application-authentication": "x",
