--- a/samples/photos/package.json
+++ b/samples/photos/package.json
@@ -1,17 +1,18 @@
 {
 	"name": "@3mo/photos",
 	"scripts": {
-		"start": "webpack serve --mode=development"
+		"start": "webpack serve --mode=development",
+		"preinstall": "npm install ../../"
 	},
 	"license": "UNLICENSED",
-	"dependencies": {
-		"@3mo/model": "file:../.."
-	},
 	"devDependencies": {
 		"ts-lit-plugin": "x",
 		"typescript": "4.x",
 		"webpack": "5.x",
 		"webpack-cli": "x",
 		"webpack-dev-server": "4.x"
+	},
+	"dependencies": {
+		"@3mo/model": "file:../.."
 	}
 }
