refactor: Migrate to "@3mo/dialog" package

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"@3mo/tooltip": "x",
 		"@3mo/virtualized-scroller": "x",
 		"@3mo/localization": "x",
+		"@3mo/dialog": "x",
 		"@a11d/lit": "x",
 		"@a11d/lit-application": "x",
 		"@a11d/lit-application-authentication": "x",
