feat: Ctrl + S to save the entity dialog

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@3mo/chip": "x",
 		"@3mo/circular-progress": "x",
 		"@3mo/collapsible-card": "x",
+		"@3mo/dialog": "x",
 		"@3mo/fab": "x",
 		"@3mo/fab-group": "x",
 		"@3mo/flex": "x",
@@ -45,6 +46,8 @@
 		"@3mo/key-path": "x",
 		"@3mo/linear-progress": "x",
 		"@3mo/loading-button": "x",
+		"@3mo/loading-dialog": "x",
+		"@3mo/localization": "x",
 		"@3mo/media-query-observer": "x",
 		"@3mo/mutation-observer": "x",
 		"@3mo/radio": "x",
@@ -58,13 +61,11 @@
 		"@3mo/tab": "x",
 		"@3mo/tooltip": "x",
 		"@3mo/virtualized-scroller": "x",
-		"@3mo/localization": "x",
-		"@3mo/dialog": "x",
-		"@3mo/loading-dialog": "x",
 		"@a11d/lit": "x",
 		"@a11d/lit-application": "x",
 		"@a11d/lit-application-authentication": "x",
 		"@a11d/lit-application-authorization": "x",
+		"@a11d/local-storage": "x",
 		"@lit-labs/task": "2.x",
 		"@material/mwc-dialog": "0.27.x",
 		"@material/mwc-drawer": "0.27.x",
