--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@3mo/dialog": "x",
 		"@3mo/fab": "x",
 		"@3mo/fab-group": "x",
+		"@3mo/fetcher-controller": "x",
 		"@3mo/flex": "x",
 		"@3mo/grid": "x",
 		"@3mo/group-box": "x",
