chore: Migrate to @3mo/snackbar package

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"@3mo/tab": "x",
 		"@3mo/tooltip": "x",
 		"@3mo/virtualized-scroller": "x",
+		"@3mo/snackbar": "x",
 		"@a11d/array.prototype.group": "x",
 		"@a11d/lit": "x",
 		"@a11d/lit-application": "x",
@@ -75,7 +76,6 @@
 		"@material/mwc-list": "0.27.x",
 		"@material/mwc-menu": "0.27.x",
 		"@material/mwc-ripple": "0.27.x",
-		"@material/mwc-snackbar": "0.27.x",
 		"@material/mwc-textarea": "0.27.x",
 		"@ts-stack/markdown": "1.x",
 		"@types/jasmine": "4.x",
