chore: Update dependencies

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@3mo/fab-group": "x",
 		"@3mo/fetcher-controller": "x",
 		"@3mo/flex": "x",
+		"@3mo/focus-controller": "x",
 		"@3mo/grid": "x",
 		"@3mo/group-box": "x",
 		"@3mo/heading": "x",
@@ -46,23 +47,27 @@
 		"@3mo/icon-button": "x",
 		"@3mo/key-path": "x",
 		"@3mo/linear-progress": "x",
+		"@3mo/list": "x",
 		"@3mo/loading-button": "x",
 		"@3mo/loading-dialog": "x",
 		"@3mo/localization": "x",
 		"@3mo/media-query-observer": "x",
+		"@3mo/menu": "x",
 		"@3mo/mutation-observer": "x",
+		"@3mo/pointer-controller": "x",
 		"@3mo/radio": "x",
 		"@3mo/resize-observer": "x",
 		"@3mo/scroller": "x",
 		"@3mo/section": "x",
 		"@3mo/slider": "x",
 		"@3mo/slot-controller": "x",
+		"@3mo/snackbar": "x",
+		"@3mo/split-button": "x",
 		"@3mo/splitter": "x",
 		"@3mo/switch": "x",
 		"@3mo/tab": "x",
 		"@3mo/tooltip": "x",
 		"@3mo/virtualized-scroller": "x",
-		"@3mo/snackbar": "x",
 		"@a11d/array.prototype.group": "x",
 		"@a11d/lit": "x",
 		"@a11d/lit-application": "x",
@@ -70,9 +75,7 @@
 		"@a11d/lit-application-authorization": "x",
 		"@a11d/local-storage": "x",
 		"@lit-labs/task": "2.x",
-		"@material/mwc-dialog": "0.27.x",
 		"@material/mwc-drawer": "0.27.x",
-		"@material/mwc-formfield": "0.27.x",
 		"@material/mwc-list": "0.27.x",
 		"@material/mwc-menu": "0.27.x",
 		"@material/mwc-ripple": "0.27.x",
@@ -83,7 +86,6 @@
 		"csstype": "3.x",
 		"favicons": "6.x",
 		"favicons-webpack-plugin": "5.x",
-		"lit": "2.x",
 		"temporal-polyfill": "0.0.x"
 	},
 	"devDependencies": {
