chore: Migrate to color-picker package

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 		"@3mo/tab": "x",
 		"@3mo/tooltip": "x",
 		"@3mo/theme": "x",
+		"@3mo/color-picker": "x",
 		"@3mo/virtualized-scroller": "x",
 		"@a11d/array.prototype.group": "x",
 		"@a11d/lit": "x",
