--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
 		"@3mo/chip": "x",
 		"@3mo/circular-progress": "x",
 		"@3mo/collapsible-card": "x",
+		"@3mo/color-picker": "x",
 		"@3mo/dialog": "x",
 		"@3mo/fab": "x",
 		"@3mo/fab-group": "x",
 		"@3mo/fetcher-controller": "x",
+		"@3mo/field": "x",
+		"@3mo/field-pair": "x",
 		"@3mo/flex": "x",
 		"@3mo/focus-controller": "x",
 		"@3mo/grid": "x",
@@ -66,9 +69,8 @@
 		"@3mo/splitter": "x",
 		"@3mo/switch": "x",
 		"@3mo/tab": "x",
-		"@3mo/tooltip": "x",
 		"@3mo/theme": "x",
-		"@3mo/color-picker": "x",
+		"@3mo/tooltip": "x",
 		"@3mo/virtualized-scroller": "x",
 		"@a11d/array.prototype.group": "x",
 		"@a11d/lit": "x",
