chore: Migrate to select-field and language-field packages

--- a/package.json
+++ b/package.json
@@ -79,6 +79,9 @@
 		"@3mo/virtualized-scroller": "x",
 		"@3mo/fetchable-dialog": "x",
 		"@3mo/entity-dialog": "x",
+		"@3mo/select-field": "x",
+		"@3mo/fetchable-select-field": "x",
+		"@3mo/language-field": "x",
 		"@3mo/confetti": "x",
 		"@a11d/array.prototype.group": "x",
 		"@a11d/lit": "x",
