--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"@3mo/menu": "x",
 		"@3mo/mutation-observer": "x",
 		"@3mo/pointer-controller": "x",
+		"@3mo/interval-controller": "x",
 		"@3mo/radio": "x",
 		"@3mo/resize-observer": "x",
 		"@3mo/scroller": "x",
