--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
 		"@3mo/fetchable-select-field": "x",
 		"@3mo/language-field": "x",
 		"@3mo/confetti": "x",
+		"@3mo/empty-state": "x",
 		"@a11d/array.prototype.group": "x",
 		"@a11d/lit": "x",
 		"@a11d/lit-application": "x",
