chore: Migrate to drawer package

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
 		"@3mo/language-field": "x",
 		"@3mo/confetti": "x",
 		"@3mo/empty-state": "x",
+		"@3mo/drawer": "x",
 		"@a11d/array.prototype.group": "x",
 		"@a11d/lit": "x",
 		"@a11d/lit-application": "x",
@@ -93,21 +94,17 @@
 		"@a11d/lit-application-authorization": "x",
 		"@a11d/local-storage": "x",
 		"@lit-labs/task": "2.x",
-		"@material/mwc-drawer": "0.27.x",
 		"@material/mwc-list": "0.27.x",
 		"@material/mwc-menu": "0.27.x",
 		"@material/mwc-ripple": "0.27.x",
 		"@ts-stack/markdown": "1.x",
 		"@types/jasmine": "4.x",
 		"bowser": "2.x",
-		"color-string": "^1.9.1",
-		"csstype": "3.x",
 		"favicons": "6.x",
 		"favicons-webpack-plugin": "5.x"
 	},
 	"devDependencies": {
 		"@a11d/eslint-config": "x",
-		"@types/color-string": "^1.5.2",
 		"@types/copy-webpack-plugin": "10.x",
 		"@types/glob": "8.x",
 		"@typescript-eslint/eslint-plugin": "x",
