--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
 		"@3mo/empty-state": "x",
 		"@3mo/drawer": "x",
 		"@3mo/pdf": "x",
+		"@3mo/context-menu": "x",
 		"detect-browser": "x",
 		"@a11d/array.prototype.group": "x",
 		"@a11d/lit": "x",
