chore: Migrate to data-grid packages

--- a/package.json
+++ b/package.json
@@ -89,6 +89,11 @@
 		"@3mo/drawer": "x",
 		"@3mo/pdf": "x",
 		"@3mo/context-menu": "x",
+		"@3mo/downloader": "x",
+		"@3mo/keyboard-controller": "x",
+		"@3mo/data-grid": "x",
+		"@3mo/fetchable-data-grid": "x",
+		"@3mo/moddable-data-grid": "x",
 		"detect-browser": "x",
 		"@a11d/array.prototype.group": "x",
 		"@a11d/lit": "x",
